syntax = "proto3";

// https://repo1.maven.org/maven2/io/grpc/protoc-gen-grpc-java/1.45.2/
/*
$PROJ_SRC='D:\d_v2\work\server\lujall\lujcluster\lujcluster\src\main'; `
$PROTOC='D:\d_v2\work\server\lujall\env\protoc-3.19.6-win64'; `
$PROTO_IN="$PROJ_SRC\proto"; $JAVA_OUT="$PROJ_SRC\java"; `
 .\protoc.exe --plugin=protoc-gen-grpc-java.exe --proto_path="$PROTO_IN" --proto_path="$PROTOC\include" --java_out="$JAVA_OUT" --grpc-java_out="$JAVA_OUT" "$PROTO_IN\*.proto"
 */

option java_multiple_files = true;
option java_package = "luj.cluster.internal.node.consul.grpc.gen";
// option java_outer_classname = "RouteGuideProto";

package lujcluster;

import "google/protobuf/empty.proto";

service NodeComm {
  rpc FireJoin(RpcNodeJoinMsg) returns (google.protobuf.Empty) {}

  rpc Receive(RpcSendRemoteMsg) returns (google.protobuf.Empty) {}
}

message RpcNodeJoinMsg {
  string host = 1;
  int32 port = 2;

  string name = 3;
  repeated string tag = 4;
}

message RpcSendRemoteMsg {
  string id = 1;
  bytes data = 2;

  string senderHost = 3;
  int32 senderPort = 4;
}
